registration-login-module_done

--- a/Software Engineering Assignment/assets/css/main-style.css
+++ b/Software Engineering Assignment/assets/css/main-style.css
@@ -1,3 +1,26 @@
+@keyframes carousal-animate {
+    0% {
+        color: white;
+        box-shadow: cornsilk -10px -20px 30px;
+        background-color: rgba(220, 103, 7, 0.81);
+    }
+
+    50% {
+        box-shadow: cornsilk 0px 0px 0px;
+    }
+
+    51% {
+        box-shadow: transparent 0px 0px 0px;
+    }
+
+    100% {
+        color: #00204a;
+        font-size: 35px;
+        box-shadow: black 10px 20px 30px;
+        background-color: rgba(255, 255, 255, 0.884);
+    }
+}
+
 body,
 h1,
 h2,
@@ -12,13 +35,18 @@ h6 {
     height: 650px;
 }
 
-.carousel h1 {
-    color: white;
-    font-weight: 800;
-    background-color: rgba(8, 86, 120, 0.564);
-    padding: 30px;
+.carousel h3 {
+    font-size: 30px;
+    font-family: 'Segoe script', Tahoma, Geneva, Verdana, sans-serif;
     text-shadow: rgb(176, 110, 24) 5px 2px 10px;
-    border-radius: 30px;
+
+    padding: 30px;
+    border-radius: 20px;
+
+    animation-name: carousal-animate;
+    animation-duration: 2.8s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 .carousel-item img {
@@ -76,4 +104,17 @@ p {
 
 .registerbtn:hover {
     opacity: 100;
+}
+
+.card-deck .card .card-header {
+    color: blue;
+    font-size: 18px;
+    text-shadow: yellow 3px 3px 10px;
+}
+
+.error {
+    background-color: crimson;
+    color: white;
+    text-shadow: black 5px 5px 12px;
+    padding: 2px;
 }
