--- a/Software Engineering Assignment/assets/css/main-style.css
+++ b/Software Engineering Assignment/assets/css/main-style.css
@@ -1,12 +1,19 @@
 @keyframes carousal-animate {
     0% {
-        color: white;
+        color: transparent;
         box-shadow: cornsilk -10px -20px 30px;
         background-color: rgba(220, 103, 7, 0.81);
+        max-width: 20%;
+        font-size: 1px;
+    }
+
+    40% {
+        color: transparent;
     }
 
     50% {
         box-shadow: cornsilk 0px 0px 0px;
+        max-width: 45%;
     }
 
     51% {
@@ -18,6 +25,7 @@
         font-size: 35px;
         box-shadow: black 10px 20px 30px;
         background-color: rgba(255, 255, 255, 0.884);
+        max-width: 100%;
     }
 }
 
@@ -44,7 +52,7 @@ h6 {
     border-radius: 20px;
 
     animation-name: carousal-animate;
-    animation-duration: 2.8s;
+    animation-duration: 2.9s;
     animation-direction: alternate;
     animation-iteration-count: infinite;
 }
